hide sensor-list graph on init, replace all 0px isntances with 0

--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -9,7 +9,7 @@
 .alarms-notify-list {
     position: absolute;
     top: 57px;
-    right: 0px;
+    right:0;
     bottom: 4px;
     overflow: auto;
     opacity: 0.9;
@@ -18,8 +18,8 @@
 }
 
 .alarm-item-overlay {
-    top: 0px;
-    left: 0px;
+    top:0;
+    left:0;
     height: 100%;
     width: 100%;
     position: absolute;
@@ -191,8 +191,8 @@ ul {
 }
 
 .background-div {
-    top: 0px;
-    left: 0px;
+    top:0;
+    left:0;
     height: 100%;
     width: 100%;
     position: absolute;
@@ -275,7 +275,7 @@ ul {
 
 .alarm-badge {
     position: absolute;
-    right: 0px;
+    right:0;
     color: black;
     .avoid-clicks;
 }
