--- a/app/health/health.less
+++ b/app/health/health.less
@@ -164,7 +164,7 @@
     bottom: 10px;
     background: white;
     color: black;
-    padding: 0px;
+    padding: 0;
     span {
         margin-top: 4px;
     }
