--- a/app/landing/landing.less
+++ b/app/landing/landing.less
@@ -44,7 +44,7 @@
 .dashboard-container {
 
     .panel {
-        box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
         border: 0;
         background-color: transparent;
     }
