--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -26,7 +26,7 @@
     //  max-height: 375;
     border: 0;
     resize: none;
-    padding: 0px;
+    padding: 0;
 }
 
 .schedule-list {
@@ -232,7 +232,7 @@
 }
 
 .grid-dropdown {
-    left: 0px;
+    left: 0;
     display: block;
     width: 99%;
     height: 29px;
@@ -264,7 +264,7 @@
 
 .highlight-script-window-with-box-shadow {
     border: 16px solid #B3E5FC !important;
-    box-shadow: 0px 2px 40px 0 #000;
+    box-shadow: 0 2px 40px 0 #000;
 }
 
 .highlight-script-border-bottom {
@@ -305,7 +305,7 @@
 .schedule-block-list {
     position: relative;
     margin-top: 4px !important;
-    margin-right: 0px !important;
+    margin-right: 0 !important;
     min-height: 200px;
     //    height: 375px;
     padding: 0 !important;
@@ -335,7 +335,7 @@
 }
 
 .whiteframe-z1-left {
-    box-shadow: -6px 6px 5px 0px rgba(0, 0, 0, 0.26);
+    box-shadow: -6px 6px 5px 0 rgba(0, 0, 0, 0.26);
 }
 
 .invalid-date-error {
@@ -351,13 +351,13 @@
 
 /* Initial state when showing */
 .slide-in-vertically-panel-content.ng-hide-remove {
-    max-height: 0px;
+    max-height: 0;
     overflow: hidden;
 }
 
 /* Will transition towards this state */
 .slide-in-vertically-panel-content.ng-hide-add.ng-hide-add-active {
-    max-height: 0px;
+    max-height: 0;
     overflow: hidden;
 }
 
