--- a/app/app.less
+++ b/app/app.less
@@ -278,7 +278,7 @@ md-sidenav {
 
 .md-fab-fa-icon-small {
     font-size: 14px;
-    //  margin-top: 0px;
+    //  margin-top: 0;
     margin-left: 1px;
     min-height: 14px;
     min-width: 14px;
@@ -306,17 +306,17 @@ md-sidenav {
 
 /* Initial state when showing */
 .slide-in-vertically-navbar.ng-hide-remove {
-    max-height: 0px;
-    min-height: 0px;
-    //    margin-bottom: 0px;
+    max-height: 0;
+    min-height: 0;
+    //    margin-bottom: 0;
     overflow: hidden;
 }
 
 /* Will transition towards this state */
 .slide-in-vertically-navbar.ng-hide-add.ng-hide-add-active {
-    max-height: 0px;
-    min-height: 0px;
-    //    margin-bottom: 0px;
+    max-height: 0;
+    min-height: 0;
+    //    margin-bottom: 0;
     overflow: hidden;
 }
 
@@ -409,7 +409,7 @@ md-toast {
     //    min-width: 38px;
     //    min-height: 38px;
     //    left: 50%;
-    //    top: 0px;
+    //    top: 0;
 
     //    md-progress-circular {
     //        width: 0%;
