--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -74,7 +74,7 @@ multi-line-chart {
         height: 36px;
         margin: 2px;
         line-height: 4.5rem;
-        //        padding: 0px !important;
+        //        padding: 0 !important;
     }
 }
 
