--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -581,6 +581,16 @@
     }
 }
 
+.left-arrow-transform-small {
+    transform: scale(0.15) rotate(180deg);
+    width: 75px;
+    height: 40px;
+    stroke-width: 5;
+    svg {
+        transform: translate(-175px, -90px);
+    }
+}
+
 .overlay-progress-circular {
     position: absolute;
     left: 0;
