many styling and layout tweaks, limit scheduler displays to LO and CA

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -601,3 +601,14 @@
     cursor: not-allowed;
     z-index: 100;
 }
+
+.progress-bar-fill {
+    top: 0 !important;
+    z-index: -1;
+    opacity: 0.4;
+    height: 100% !important;
+    div {
+        top: 0 !important;
+        height: 100% !important;
+    }
+}
