--- a/app/app.less
+++ b/app/app.less
@@ -751,7 +751,7 @@ md-chips .md-chip {
 
 pre {
     height: 100%;
-    background: transparent;
+    background-color: rgba(255,255,255, 0.8);
     border: none;
 }
 
