restyling main navbar buttons

--- a/app/app.less
+++ b/app/app.less
@@ -645,15 +645,12 @@ md-toast {
 }
 
 .mainbar-navbar-button {
-    padding: 0 !important;
-    font-size: 30px !important;
-    height: 56px !important;
-    margin: 4px !important;
-
-    md-icon {
-        margin-top: -10px;
-        margin-left: -4px;
-    }
+    padding: 0;
+    margin: 0;
+    font-size: 30px;
+    height: 56px;
+    max-width: 48px;
+    min-width: 48px;
 }
 
 *:focus {
