changed floodlights button to md-switch

--- a/app/video/video.less
+++ b/app/video/video.less
@@ -11,10 +11,6 @@
 
 .floodlights-button {
     position: absolute;
-    right: 8px;
-    top: 8px;
-    opacity: 0.25;
-    &:hover {
-        opacity: 1.0;
-    }
+    right: 0;
+    top: 0;
 }
