disable buttons on home page according to role, changed scheduler to work with new sched polling backend

--- a/app/widgets/navigation/navigation-widget.less
+++ b/app/widgets/navigation/navigation-widget.less
@@ -20,6 +20,11 @@
     }
 }
 
+.pie-button-path-disabled {
+    stroke-width: 2;
+    cursor: not-allowed;
+}
+
 .pie-button-text {
     text-anchor: middle;
     text-transform: uppercase;
