optimised sb draft listing to use md-virtual-repeat for much faster response time

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -136,6 +136,10 @@
     overflow: hidden;
 }
 
+.md-virtual-repeat-container .md-virtual-repeat-offsetter {
+    right: 0;
+}
+
 .resource-pool-item {
     height: 32px;
     padding: 2px;
