--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -611,3 +611,9 @@
         height: 100% !important;
     }
 }
+
+.hide-row {
+    max-height: 0 !important;
+    min-height: 0 !important;
+    border: 0;
+}
