--- a/app/health/health.less
+++ b/app/health/health.less
@@ -200,7 +200,8 @@
 
 .status-top-label-text {
     color: white;
-    font-size: 22px;
+    font-size: 20px;
+    word-break: break-all;
 }
 
 .receptor-status-column-heading {
