remove templates from cache, updating hover styling, fixed svg version attributes

--- a/app/sensor-list/sensor-list.less
+++ b/app/sensor-list/sensor-list.less
@@ -11,7 +11,7 @@
 
     .resource-sensor-item {
         cursor: pointer;
-        margin: 2px;
+        padding: 0 8px;
         &:hover {
             background-color: rgba(158, 158, 158, 0.1);
         }
