fix for tag popup list not displaying correctly on built version, updated styling of user log edit dialog

--- a/app/userlogs/userlogs.less
+++ b/app/userlogs/userlogs.less
@@ -4,3 +4,19 @@
         background-color: rgba(158, 158, 158, 0.1);
     }
 }
+
+.repeated-item {
+    &:hover {
+        background-color: rgba(158, 158, 158, 0.1);
+    }
+}
+
+.tag-popup-list {
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    bottom: 100px;
+    background-color: white;
+    overflow: auto;
+    padding: 4px;
+}
