fixed a data out of order bug on sensor graph, fixed tooltip displaying on incoming data when it shouldnt

--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -234,6 +234,7 @@ actions-button {
     word-wrap: break-word;
     border: 1px solid #333;
     box-shadow: 0 8px 17px 1px rgba(0, 0, 0, 0.2);
+    display: none;
 }
 
 .wind-direction-path {
