removed selected sb resources, color for priority icons

--- a/app/app.less
+++ b/app/app.less
@@ -644,6 +644,18 @@ md-toast {
     color: #F44336;
 }
 
+.dark-amber-color {
+    color: #FF6F00;
+}
+
+.dark-blue-grey-color {
+    color: #263238;
+}
+
+.light-grey-color {
+    color: #BDBDBD;
+}
+
 .mainbar-navbar-button {
     padding: 0;
     margin: 0;
