--- a/app/app.less
+++ b/app/app.less
@@ -243,7 +243,7 @@ md-sidenav {
     border: 0;
     position: absolute;
     z-index: 3;
-    width: 95%;
+    pointer-events: none;
     span {
         margin-left: 32px;
 
