first commit of qbl demo comments updates and rewrite of katstore_ws alignment

--- a/app/app.less
+++ b/app/app.less
@@ -296,7 +296,7 @@ md-sidenav {
 
 /* After the transition this will be the only class remaining */
 .slide-in-vertically-navbar {
-    transition: all 0.25s ease-out;
+    transition: all 0.1s ease-out;
     max-height: 56px;
     min-height: 56px;
     margin-bottom: 4px;
@@ -374,7 +374,9 @@ md-sidenav {
 }
 
 md-toast {
-    font-size: 18px !important;
+    max-width: 800px !important;
+    font-size: 16px !important;
+    bottom: 28px !important;
 }
 
 .list-subheader-title {
