wip sensor-graph improvements

--- a/app/app.less
+++ b/app/app.less
@@ -772,3 +772,11 @@ pre {
     left: 0;
     right: 0;
 }
+
+.md-sidenav-right {
+    position: fixed;
+}
+
+.md-sidenav-left {
+    position: fixed;
+}
