fixed menus closing when clicking complex controls in them, sensor graph and sensor list fixes

--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -121,8 +121,8 @@ multi-line-chart {
 }
 
 .custom-chips .md-chip {
-    position: relative;
-    padding-right: 3.5rem;
+    // position: relative;
+    // padding-right: 3.5rem;
 }
 
 .sensor-graph-tips {
