--- a/app/app.less
+++ b/app/app.less
@@ -91,6 +91,10 @@
 //    cursor: auto;
 //}
 
+.margin-bottom-25 {
+    margin-bottom: 25px;
+}
+
 .toolbar-collapse-button {
     position: absolute;
     top: 0;
