fixed fill color for status trees being overridden by dynamically injected css

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -28,7 +28,7 @@
 .nominal-child {
     background-color: #4CAF50;
     fill: #4CAF50;
-    stroke: #fff;
+    stroke: #fff !important;
     rect {
         fill: #4CAF50;
     }
@@ -48,7 +48,7 @@
 .warn-child {
     stroke: #fff;
     background-color: #FFC107;
-    fill: #FFC107;
+    fill: #FFC107 !important;
     rect {
         fill: #FFC107;
     }
@@ -69,7 +69,7 @@
 .error-child {
     background-color: #F44336;
     fill: #F44336;
-    stroke: #fff;
+    stroke: #fff !important;
     rect {
         fill: #F44336;
     }
@@ -90,7 +90,7 @@
 .failure-child {
     stroke: #fff;
     background-color: #3F51B5;
-    fill: #3F51B5;
+    fill: #3F51B5 !important;
     rect {
         fill: #3F51B5;
     }
@@ -111,7 +111,7 @@
 .unreachable-child {
     stroke: #fff;
     background-color: #EC407A;
-    fill: #EC407A;
+    fill: #EC407A !important;
     rect {
         fill: #EC407A;
     }
@@ -132,7 +132,7 @@
 .inactive-child {
     stroke: #fff;
     background-color: #000;
-    fill: #000;
+    fill: #000 !important;
 
     rect {
         //        fill: #795548;
