lighter grey for inactive sensor blocks

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -131,8 +131,8 @@
 
 .inactive-child {
     stroke: #fff;
-    background-color: #000;
-    fill: #000 !important;
+    background-color: #aaa;
+    fill: #aaa !important;
 
     rect {
         //        fill: #795548;
