--- a/app/health/health.less
+++ b/app/health/health.less
@@ -552,3 +552,25 @@
         padding: 0px 4px;
     }
 }
+
+
+.node {
+  cursor: pointer;
+  stroke: #3182bd;
+  stroke-width: 1.5px;
+}
+
+.node-text {
+  pointer-events: none;
+  text-anchor: middle;
+}
+
+.link {
+  fill: none;
+  stroke: #d7d7d7;
+  stroke-width: 1.5px;
+}
+
+.no-fill {
+    fill: none;
+}
