--- a/app/health/health.less
+++ b/app/health/health.less
@@ -456,18 +456,15 @@
 }
 
 .custom-health-hide-tree {
-    md-icon {
-        line-height: 1.5;
-        color: white;
-    }
-
     position: absolute;
-    right: 4px;
-    margin-top: 4px;
-    max-height: 28px;
-    min-height: 28px;
-    max-width: 28px;
-    min-width: 28px;
+    padding: 0;
+    margin: 0;
+    right: 0;
+    max-height: 32px;
+    min-height: 32px;
+    max-width: 32px;
+    min-width: 32px;
+    z-index: 10;
 }
 
 .receptor-graphic-svg {
