set band, product, resources on subarray for templates

--- a/app/app.less
+++ b/app/app.less
@@ -788,3 +788,10 @@ pre {
 .opacity-50 {
     opacity: 0.25;
 }
+
+.span-text-overflow-hidden-ellipsis {
+    span {
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+}
