feature: purple border for receptors in maintenance on top health and receptor health views

--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -6,12 +6,6 @@ text {
     font-weight: bold;
 }
 
-rect {
-    fill: none;
-    //    stroke: #fff;
-    stroke-width: 2px;
-}
-
 rect.parent,
 .grandparent rect {
     stroke-width: 2px;
@@ -244,4 +238,9 @@ actions-button {
     path {
         opacity: 0.5;
     }
+}
+
+.text-bg-rect {
+    stroke: transparent;
+    stroke-width: 0;
 }
