show receptors in warn when sensors ok status == warn

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -523,6 +523,18 @@
     }
 }
 
+.receptor-graphic-sensors-warn {
+    color: #FFC107;
+    path {
+        stroke: #4CAF50 !important; //green
+    }
+    .fill-path-status {
+        path {
+            fill: rgba(76, 175, 80, 0.1) !important;
+        }
+    }
+}
+
 .receptor-graphic-sensors-error {
     color: #F44336;
     path {
