reworked subarray health display to be usable, better repainting some d3 displays when resizing the window

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -604,11 +604,13 @@
 .link {
   fill: none;
   stroke: #d7d7d7;
-  stroke-width: 1.5px;
+  stroke-width: 10px;
 }
 
-.no-fill {
-    fill: none;
+.subarray-node {
+    fill: rgba(127,127,127,0.5);
+    stroke: #d7d7d7;
+    stroke-width: 1px;
 }
 
 .in-maintenance-receptor {
