pinned angular 1.4.8, added missing style for warn-item

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -275,6 +275,11 @@
     color: white;
 }
 
+.warn-item {
+    background-color: #ffeb3b;
+    color: black;
+}
+
 .unknown-item {
     background-color: #9E9E9E;
     color: white;
