first commit of reworking userlogs

--- a/app/userlogs/userlogs.less
+++ b/app/userlogs/userlogs.less
@@ -20,3 +20,18 @@
     overflow: auto;
     padding: 4px;
 }
+
+.tag-row-item {
+    padding: 0 8px;
+    max-height: 20px;
+    min-height: 20px;
+    overflow: hidden;
+    &:hover {
+        background-color: rgba(158, 158, 158, 0.1);
+    }
+}
+
+.tag-name {
+    min-width: 300px;
+    max-width: 300px;
+}
