--- a/app/userlogs/userlogs.less
+++ b/app/userlogs/userlogs.less
@@ -26,6 +26,7 @@
     max-height: 20px;
     min-height: 20px;
     overflow: hidden;
+    cursor: pointer;
     &:hover {
         background-color: rgba(158, 158, 158, 0.1);
     }
@@ -34,4 +35,8 @@
 .tag-name {
     min-width: 300px;
     max-width: 300px;
+}
+
+.deactivated-tag {
+    text-decoration: line-through;
 }
