various user logging rework

--- a/app/userlogs/userlogs.less
+++ b/app/userlogs/userlogs.less
@@ -40,3 +40,18 @@
 .deactivated-tag {
     text-decoration: line-through;
 }
+
+.userlog-new-log-row {
+    overflow: hidden;
+    border: 4px solid rgba(255, 127, 127, 0.5);
+
+    md-input-container {
+        margin: 0 !important;
+        padding-top: 8px !important;
+        padding-bottom: 2px !important;
+        padding-left: 2px !important;
+        padding-right: 2px !important;
+        max-height: 40px !important;
+        min-height: 40px !important;
+    }
+}
