--- a/app/userlogs/userlogs.less
+++ b/app/userlogs/userlogs.less
@@ -5,7 +5,9 @@
     }
 }
 
-.repeated-item {
+.tag-popup-item {
+    font-size: 12px;
+    color: black;
     &:hover {
         background-color: rgba(158, 158, 158, 0.1);
     }
@@ -43,7 +45,7 @@
 
 .userlog-new-log-row {
     overflow: hidden;
-    border: 4px solid rgba(255, 127, 127, 0.5);
+    border: 4px solid #2196F3;
 
     md-input-container {
         margin: 0 !important;
@@ -54,4 +56,22 @@
         max-height: 40px !important;
         min-height: 40px !important;
     }
+}
+
+.fetch-more-logs-button {
+    max-height: 32px;
+    min-height: 32px;
+    max-width: 100%;
+    min-width: 100%;
+    margin: 2px 0;
+    padding: 0;
+}
+
+.userlog-user-name {
+    margin: 0 4px;
+    max-width: 80px;
+    min-width: 80px;
+    font-size: 12px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
