allow expert role to do the same as lead operator; allow everyone to view scheduler, but limit functionailty per role on buttons

--- a/app/app.less
+++ b/app/app.less
@@ -98,8 +98,8 @@
 .toolbar-collapse-button {
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
+    left: 48%;
+    width: 60px;
     cursor: pointer !important;
     border: 0;
     background: none;
