--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -612,3 +612,13 @@
     min-height: 0 !important;
     border: 0;
 }
+
+.subarray-config-menu-button {
+    text-transform: none;
+    margin: 0 4px;
+    padding: 0;
+    font-size: 12px;
+    min-width: auto;
+    min-height: auto;
+    line-height: normal;
+}
