--- a/app/userlogs/userlogs.less
+++ b/app/userlogs/userlogs.less
@@ -58,6 +58,11 @@
     }
 }
 
+.userlog-new-chat-log-row {
+    .userlog-new-log-row;
+    border: 4px solid #4CAF50;
+}
+
 .fetch-more-logs-button {
     max-height: 32px;
     min-height: 32px;
@@ -74,4 +79,36 @@
     font-size: 12px;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.compressed-userlog {
+    max-height: 32px;
+    min-height: 32px;
+    overflow: hidden;
+    line-height: 32px;
+}
+
+.tags-list-container {
+    max-width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 11px;
+}
+
+.tags-list-compressed-container {
+    max-height: 32px;
+}
+
+.small-chips {
+    .md-chips .md-chip {
+        margin: 2px;
+        line-height: 20px
+        height: 20px;
+    }
+    .md-chip-input-container {
+        margin: 2px;
+    }
+    md-chips-wrap {
+        padding: 0 2px;
+    }
 }
