better tooltip logic for mandatory tags; better layout for fetch more buttons

--- a/app/userlogs/userlogs.less
+++ b/app/userlogs/userlogs.less
@@ -64,8 +64,6 @@
 }
 
 .fetch-more-logs-button {
-    max-height: 32px;
-    min-height: 32px;
     max-width: 100%;
     min-width: 100%;
     margin: 2px 0;
@@ -111,6 +109,14 @@
     }
     md-chips-wrap {
         padding: 0 2px;
+    }
+    md-autocomplete {
+        max-width: 100px !important;
+        min-width: 100px !important;
+    }
+    input {
+        font-size: 11px;
+        max-width: 100px;
     }
 }
 
