WIP - first batch of refactoring for resource assignment

--- a/app/app.less
+++ b/app/app.less
@@ -796,3 +796,14 @@ pre {
         overflow: hidden;
     }
 }
+
+.icon-button {
+    height: 26px;
+    width: 26px;
+    font-size: 14px;
+    padding: 6px;
+    opacity: 0.2;
+    &:hover {
+        opacity: 0.7;
+    }
+}
