--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -114,7 +114,7 @@
     min-height: 32px;
     padding: 4px;
     min-width: 200px;
-    border-bottom: 1px solid darken(@item-border-bottom, 10%);
+    border: 1px solid rgba(158, 158, 158, 0.3);
     overflow: hidden;
     //    background-color: @item-bg;
     &:hover {
@@ -539,6 +539,13 @@
 
 .maintenance-bg {
     background-color: rgba(206, 147, 216, 0.5);
+    &:hover {
+        background-color: rgba(206, 147, 216, 0.6);
+    }
+}
+
+.faulty-border {
+    border: 1px solid #F44336 !important;
 }
 
 .inline-action-button {
@@ -621,4 +628,22 @@
     min-width: auto;
     min-height: auto;
     line-height: normal;
+}
+
+.subarray-action-icon {
+    font-size: 30px;
+    height: 100%;
+    padding: 6px;
+    margin: 0 6px;
+}
+
+.subarray-select-chevron {
+    font-size: 12px;
+    position: absolute;
+    top: 12px;
+    left: 0;
+    opacity: 0.1;
+    &:hover {
+        opacity: 0.7;
+    }
 }
