first pass for improving nav buttons on scheduler display

--- a/app/app.less
+++ b/app/app.less
@@ -811,3 +811,11 @@ pre {
 .opaque {
     opacity: 1.0;
 }
+
+.thin-nav-button {
+    margin: 0;
+    max-height: 22px;
+    min-height: 22px;
+    font-size: 12px;
+    line-height: 22px;
+}
