--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -560,14 +560,10 @@
     }
 }
 
-.left-arrow-transform-small {
-    transform: scale(0.15) rotate(180deg);
-    width: 75px;
-    height: 40px;
-    stroke-width: 5;
-    svg {
-        transform: translate(-175px, -90px);
-    }
+.arrow-nav-icon {
+    margin: 4px;
+    font-size: 14px;
+    opacity: 0.5;
 }
 
 .overlay-progress-circular {
