upgrade to material 1.1.0-rc5 (no issues found in gui); better sensor list navigation

--- a/app/app.less
+++ b/app/app.less
@@ -803,6 +803,7 @@ pre {
     font-size: 14px;
     padding: 6px;
     opacity: 0.2;
+    transition: opacity .25s ease-in-out;
     &:hover {
         opacity: 0.7;
     }
