--- a/app/sensor-list/sensor-list.less
+++ b/app/sensor-list/sensor-list.less
@@ -1,8 +1,11 @@
 .resource-root-item {
     margin: 0;
-    text-align: end;
-    width: 160px;
-    padding-right: 12px;
+    text-align: start;
+    padding: 4px 8px;
+    max-height: 24px;
+    min-height: 24px;
+    line-height: 24px;
+    font-size: 12px;
 }
 
 .resource-sensors-list {
@@ -151,4 +154,8 @@
     md-list {
         padding: 0;
     }
+}
+
+.at-least-400-high {
+    min-height: 400px;
 }
