--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -613,6 +613,7 @@
     top: 12px;
     left: 0;
     opacity: 0.1;
+    transition: opacity .25s ease-in-out;
     &:hover {
         opacity: 0.7;
     }
@@ -620,6 +621,7 @@
 
 .hover-opacity {
     opacity: 0.3;
+    transition: opacity .25s ease-in-out;
     &:hover {
         opacity: 1.0;
     }
