--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -102,7 +102,8 @@
 
 .selected-resource-item {
     background: #B3E5FC !important;
-    // color: #333333;
+    font-style: italic;
+    
     span.resource-name {
         color: #333333;
     }
@@ -131,7 +132,6 @@
     &:hover {
         background-color: rgba(158, 158, 158, 0.1);
     }
-
 }
 
 .md-virtual-repeat-container .md-virtual-repeat-offsetter {
